src/objects/filegen__Batch_Header_Record__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Company_Descriptive_Date__c</fullName>
        <label>Company  Descriptive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>filegen__Company_Discretionary_Data__c</fullName>
        <label>Company  Discretionary  Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Company_Entry_Description__c</fullName>
        <label>Company Entry  Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Company_Identification__c</fullName>
        <label>Company  Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Company_Name__c</fullName>
        <label>Company  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Effective_Entry_Date__c</fullName>
        <label>Effective Entry  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>filegen__Originating_DFI_Identification__c</fullName>
        <label>Originating DFI  Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Originator_Status_Code__c</fullName>
        <label>Originator Status  Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__SEC_Code__c</fullName>
        <label>SEC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Service_Class_Code__c</fullName>
        <label>Service Class  Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Settlement_Date__c</fullName>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <label>Batch Header Record</label>
    <nameField>
        <displayFormat>BHR-{0000000000}</displayFormat>
        <label>Batch Header Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Header Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>